# ext3DLBP

./: CMakeLists.txt~  LICENSE.md  LICENSE.md~  README.md  README.md~  build.sh~
examples/convert_3d_texture_cpp/: CMakeLists.txt  main.cpp
examples/convert_3d_texture_python/: main.py  main.py~  run.sh
examples/img/Blobs01/: texture.xml
examples/quickstart/: CMakeLists.txt  build.sh  clean.sh  main.cpp
include/: BinaryRegionGrowing.hpp  CMakeLists.txt~  ext3DLBP.hpp  interpolation.hpp  interpolation_3d_252_r1_k5.hpp  interpolation_3d_252_r2_k5.hpp  interpolation_3d_252_r2_k7.hpp  interpolation_3d_252_r3_k7.hpp  interpolation_3d_42_r1_k3.hpp  interpolation_3d_42_r1_k5.hpp  interpolation_3d_42_r2_k5.hpp  interpolation_3d_92_r1_k3.hpp  interpolation_3d_92_r1_k5.hpp  interpolation_3d_92_r2_k5.hpp  interpolation_3d_92_r2_k7.hpp  interpolation_3d_92_r3_k7.hpp  interpolation_3d_r0_kx.hpp  mesh.hpp  types.hpp  utils.hpp
python_wrapper/: CMakeLists.txt  CMakeLists.txt~  build (copy).sh~  build.sh  build_manually.sh  build_manually.sh~  clean.sh  ext3DLBPpy.cpp  test.py
python_wrapper/test_functional/: run.sh  test_NI_LBP_P252g_R2.py  test_NI_LBP_P252g_R3.py  test_NI_LBP_P42g_R1.py  test_NI_LBP_P42g_R2.py  test_NI_LBP_P92g_R1.py  test_NI_LBP_P92g_R2.py  test_NI_LBP_P92g_R3.py  test_NI_RD_CI_LBP_P252g_R2.py  test_NI_RD_CI_LBP_P252g_R3.py  test_NI_RD_CI_LBP_P42g_R1.py  test_NI_RD_CI_LBP_P42g_R2.py  test_NI_RD_CI_LBP_P92g_R1.py  test_NI_RD_CI_LBP_P92g_R2.py  test_NI_RD_CI_LBP_P92g_R3.py  test_NI_RD_LBP_P252g_R2.py  test_NI_RD_LBP_P252g_R3.py  test_NI_RD_LBP_P42g_R1.py  test_NI_RD_LBP_P42g_R2.py  test_NI_RD_LBP_P92g_R1.py  test_NI_RD_LBP_P92g_R2.py  test_NI_RD_LBP_P92g_R3.py  test_RD_LBP_P252g_R2.py  test_RD_LBP_P252g_R3.py  test_RD_LBP_P42g_R1.py  test_RD_LBP_P42g_R2.py  test_RD_LBP_P92g_R1.py  test_RD_LBP_P92g_R2.py  test_RD_LBP_P92g_R3.py
test_functional/: CMakeLists.txt  build.sh  run.sh  test_NI_LBP_P252g_R2.cpp  test_NI_LBP_P252g_R3.cpp  test_NI_LBP_P42g_R1.cpp  test_NI_LBP_P42g_R2.cpp  test_NI_LBP_P92g_R1.cpp  test_NI_LBP_P92g_R2.cpp  test_NI_LBP_P92g_R3.cpp  test_NI_RD_CI_LBP_P252g_R2.cpp  test_NI_RD_CI_LBP_P252g_R3.cpp  test_NI_RD_CI_LBP_P42g_R1.cpp  test_NI_RD_CI_LBP_P42g_R2.cpp  test_NI_RD_CI_LBP_P92g_R1.cpp  test_NI_RD_CI_LBP_P92g_R2.cpp  test_NI_RD_CI_LBP_P92g_R3.cpp  test_NI_RD_LBP_P252g_R2.cpp  test_NI_RD_LBP_P252g_R3.cpp  test_NI_RD_LBP_P42g_R1.cpp  test_NI_RD_LBP_P42g_R2.cpp  test_NI_RD_LBP_P92g_R1.cpp  test_NI_RD_LBP_P92g_R2.cpp  test_NI_RD_LBP_P92g_R3.cpp  test_RD_LBP_P252g_R2.cpp  test_RD_LBP_P252g_R3.cpp  test_RD_LBP_P42g_R1.cpp  test_RD_LBP_P42g_R2.cpp  test_RD_LBP_P92g_R1.cpp  test_RD_LBP_P92g_R2.cpp  test_RD_LBP_P92g_R3.cpp
