cmake_minimum_required(VERSION 2.8)

project(ext3DLBP_project)

SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++14 -O2")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )

include_directories(.. ../include)

add_executable(test_NI_RD_CI_LBP_P42g_R1 test_NI_RD_CI_LBP_P42g_R1.cpp)
add_executable(test_NI_RD_CI_LBP_P42g_R2 test_NI_RD_CI_LBP_P42g_R2.cpp)
add_executable(test_NI_RD_CI_LBP_P92g_R1 test_NI_RD_CI_LBP_P92g_R1.cpp)
add_executable(test_NI_RD_CI_LBP_P92g_R2 test_NI_RD_CI_LBP_P92g_R2.cpp)
add_executable(test_NI_RD_CI_LBP_P92g_R3 test_NI_RD_CI_LBP_P92g_R3.cpp)
add_executable(test_NI_RD_CI_LBP_P252g_R2 test_NI_RD_CI_LBP_P252g_R2.cpp)
add_executable(test_NI_RD_CI_LBP_P252g_R3 test_NI_RD_CI_LBP_P252g_R3.cpp)
add_executable(test_NI_LBP_P42g_R1 test_NI_LBP_P42g_R1.cpp)
add_executable(test_NI_LBP_P42g_R2 test_NI_LBP_P42g_R2.cpp)
add_executable(test_NI_LBP_P92g_R1 test_NI_LBP_P92g_R1.cpp)
add_executable(test_NI_LBP_P92g_R2 test_NI_LBP_P92g_R2.cpp)
add_executable(test_NI_LBP_P92g_R3 test_NI_LBP_P92g_R3.cpp)
add_executable(test_NI_LBP_P252g_R2 test_NI_LBP_P252g_R2.cpp)
add_executable(test_NI_LBP_P252g_R3 test_NI_LBP_P252g_R3.cpp)
add_executable(test_RD_LBP_P42g_R1 test_RD_LBP_P42g_R1.cpp)
add_executable(test_RD_LBP_P42g_R2 test_RD_LBP_P42g_R2.cpp)
add_executable(test_RD_LBP_P92g_R1 test_RD_LBP_P92g_R1.cpp)
add_executable(test_RD_LBP_P92g_R2 test_RD_LBP_P92g_R2.cpp)
add_executable(test_RD_LBP_P92g_R3 test_RD_LBP_P92g_R3.cpp)
add_executable(test_RD_LBP_P252g_R2 test_RD_LBP_P252g_R2.cpp)
add_executable(test_RD_LBP_P252g_R3 test_RD_LBP_P252g_R3.cpp)
add_executable(test_NI_RD_LBP_P42g_R1 test_NI_RD_LBP_P42g_R1.cpp)
add_executable(test_NI_RD_LBP_P42g_R2 test_NI_RD_LBP_P42g_R2.cpp)
add_executable(test_NI_RD_LBP_P92g_R1 test_NI_RD_LBP_P92g_R1.cpp)
add_executable(test_NI_RD_LBP_P92g_R2 test_NI_RD_LBP_P92g_R2.cpp)
add_executable(test_NI_RD_LBP_P92g_R3 test_NI_RD_LBP_P92g_R3.cpp)
add_executable(test_NI_RD_LBP_P252g_R2 test_NI_RD_LBP_P252g_R2.cpp)
add_executable(test_NI_RD_LBP_P252g_R3 test_NI_RD_LBP_P252g_R3.cpp)

